--- a/_quarto.yml
+++ b/_quarto.yml
@@ -17,6 +17,8 @@ website:
             href: hw0.qmd
           - text: HW1
             href: hw1.qmd
+          - text: HW3
+            href: hw3qmd.qmd
             
 format:
   html:
